# llvm-build

./: .gitignore  .gitmodules  .pre-commit-config.yaml  bench_globalisel.sh  bench_sdag.sh  build.py  build_release.sh  builders.py  cmake.py  env.sh  install_deps_ubuntu.sh  llvm.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  utils.py
.github/workflows/: llvm-amd64.yaml  llvm-riscv64-test.yaml  llvm-riscv64.yaml  sync-llvm-android.yaml
Docker/: Dockerfile_riscv_test
builders/: android_extension.py  build.py  builders.py  driver.py
builders/common/: adaptors.py  base_builders.py  compiler.py  context.py  define_providers.py  llvm.py  utils.py
builders/toolchain/: __init__.py  gcc.py  llvm.py
projects/: llvm-amd64-basic.yaml  llvm-amd64.yaml  llvm-riscv64.yaml  llvm-test-suite-O3-globalisel.yaml  llvm-test-suite-O3-sdag.yaml  llvm.yaml
script/: apt_install.sh  bench_globalisel.sh  build_and_test.sh  build_driver.sh  build_lldb_release.sh  build_llvm_riscv64.sh  build_release.sh  build_runtime.sh  build_runtime_release.sh  env.sh  install_deps_ubuntu.sh  install_test_deps_ubuntu.sh
script/ubuntu/: install_build.sh  install_riscv64_corss_build.sh  install_riscv64_cross_build.sh  install_test.sh
src/llvm_build/builders/: build.py  builders.py  driver.py
src/llvm_build/common/: adaptors.py  base_builders.py  cmake.py  compiler.py  context.py  define_providers.py  llvm.py  utils.py
src/llvm_build/toolchain/: __init__.py  gnu.py  llvm.py
tests/unittest/llvm_build/toolchain/: toolchain_test.py
